[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/LABEL/LABEL.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/BTNGrid/BTNGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TriviaGrid/TriviaGrid.gd" type="Script" id=3]

[node name="TriviaGrid" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -50.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 100.0

[node name="BTNGrid" parent="." instance=ExtResource( 2 )]
margin_top = 104.0
margin_right = 480.0
margin_bottom = 324.0

[node name="MoneyLabel" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 328.0
margin_right = 480.0
margin_bottom = 428.0
